// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`qr-code demo > renders _semantic correctly 1`] = `
<div
  class="semantic-preview-container"
  data-v-dfc8ebef=""
>
  <div
    class="ant-row css-var-root semantic-preview-row"
    data-v-dfc8ebef=""
  >
    <div
      class="ant-col ant-col-16 css-var-root semantic-preview-col"
      data-v-dfc8ebef=""
    >
      <div
        class="ant-qrcode css-var-v-0 semantic-mark-root"
        style="background-color: transparent; width: 160px; height: 160px;"
      >
        <div
          class="ant-qrcode-cover semantic-mark-cover"
        >
          <div
            aria-busy="true"
            aria-live="polite"
            class="ant-spin ant-spin-spinning ant-spin-section css-var-v-0"
          >
            <span
              class="ant-spin-dot-holder"
            >
              <span
                class="ant-spin-dot ant-spin-dot-spin"
              >
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
              </span>
            </span>
            <!---->
            <!---->
            <!---->
          </div>
        </div>
        <canvas
          height="160"
          role="img"
          width="160"
        />
        <!---->
      </div>
    </div>
    <div
      class="ant-col ant-col-8 css-var-root"
      data-v-dfc8ebef=""
    >
      <ul
        class="semantic-list"
        data-v-dfc8ebef=""
      >
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  root
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <!--v-if-->
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Root element, set flex layout, padding, background color, border, border radius and relative positioning styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  cover
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <!--v-if-->
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Cover element, set absolute positioning, z-index, background color and loading state overlay styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`qr-code demo > renders Popover correctly 1`] = `
<div
  data-v-app=""
>
  <button
    class="ant-btn css-var-root ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
    type="button"
  >
    <transition-stub
      appear="false"
      css="true"
      name="ant-btn-loading-icon-motion"
      persisted="false"
    >
      <!---->
    </transition-stub>
    <span>
       Hover me 
    </span>
    <!---->
  </button>
  <!---->
</div>
`;

exports[`qr-code demo > renders base correctly 1`] = `
<div
  class="ant-space ant-space-vertical ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-root"
>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-qrcode css-var-root"
      style="background-color: transparent; width: 160px; height: 160px;"
    >
      <!---->
      <canvas
        height="160"
        role="img"
        width="160"
      />
      <!---->
    </div>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <input
      class="ant-input ant-input-outlined css-var-root ant-input-css-var"
      maxlength="60"
      placeholder="-"
      type="text"
      value="https://www.antdv-next.com"
    />
  </div>
  <!---->
</div>
`;

exports[`qr-code demo > renders customColor correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-root"
>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-qrcode css-var-root"
      style="background-color: transparent; width: 160px; height: 160px;"
    >
      <!---->
      <canvas
        height="160"
        role="img"
        width="160"
      />
      <!---->
    </div>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <div
      class="ant-qrcode css-var-root"
      style="background-color: rgb(245, 245, 245); width: 160px; height: 160px;"
    >
      <!---->
      <canvas
        height="160"
        role="img"
        width="160"
      />
      <!---->
    </div>
  </div>
  <!---->
</div>
`;

exports[`qr-code demo > renders customSize correctly 1`] = `
<div
  data-v-app=""
>
  <div
    class="ant-space-compact css-var-root mb-16px"
  >
    <button
      class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-compact-item ant-btn-compact-first-item"
      type="button"
    >
      <span
        class="ant-btn-icon"
      >
        <span
          aria-label="minus"
          class="anticon anticon-minus"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="minus"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M872 474H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h720c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
            />
          </svg>
        </span>
      </span>
      <span>
         Smaller 
      </span>
      <!---->
    </button>
    <button
      class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-compact-item ant-btn-compact-last-item"
      type="button"
    >
      <span
        class="ant-btn-icon"
      >
        <span
          aria-label="plus"
          class="anticon anticon-plus"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="plus"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
            />
            <path
              d="M192 474h672q8 0 8 8v60q0 8-8 8H160q-8 0-8-8v-60q0-8 8-8z"
            />
          </svg>
        </span>
      </span>
      <span>
         Larger 
      </span>
      <!---->
    </button>
  </div>
  <div
    class="ant-qrcode css-var-root"
    style="background-color: transparent; width: 160px; height: 160px;"
  >
    <!---->
    <canvas
      height="160"
      role="img"
      width="160"
    />
    <img
      alt="QR-Code"
      src="https://gw.alipayobjects.com/zos/rmsportal/KDpgvguMpGfqaHPjicRK.svg"
      style="display: none;"
    />
  </div>
</div>
`;

exports[`qr-code demo > renders customStatusRender correctly 1`] = `
<div
  class="ant-flex css-var-root ant-flex-wrap-wrap ant-flex-gap-middle"
>
  <div
    class="ant-qrcode css-var-root"
    style="background-color: transparent; width: 160px; height: 160px;"
  >
    <div
      class="ant-qrcode-cover"
    >
      <div
        class="ant-space ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small css-var-root"
      >
        <div
          class="ant-space-item"
        >
          <div
            aria-busy="true"
            aria-live="polite"
            class="ant-spin ant-spin-spinning ant-spin-section css-var-root"
          >
            <span
              class="ant-spin-dot-holder"
            >
              <span
                class="ant-spin-dot ant-spin-dot-spin"
              >
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
              </span>
            </span>
            <!---->
            <!---->
            <!---->
          </div>
        </div>
        <!---->
        <div
          class="ant-space-item"
        >
          <p>
            Loading...
          </p>
        </div>
        <!---->
      </div>
    </div>
    <canvas
      height="160"
      role="img"
      width="160"
    />
    <!---->
  </div>
  <div
    class="ant-qrcode css-var-root"
    style="background-color: transparent; width: 160px; height: 160px;"
  >
    <div
      class="ant-qrcode-cover"
    >
      <div>
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle"
          role="img"
          style="color: red;"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            fill-rule="evenodd"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
            />
          </svg>
        </span>
         QR code expired 
        <p>
          <button
            class="ant-btn css-var-root ant-btn-link ant-btn-color-link ant-btn-variant-link"
            type="button"
          >
            <transition-stub
              appear="false"
              css="true"
              name="ant-btn-loading-icon-motion"
              persisted="false"
            >
              <!---->
            </transition-stub>
            <span
              aria-label="reload"
              class="anticon anticon-reload"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="reload"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M909.1 209.3l-56.4 44.1C775.8 155.1 656.2 92 521.9 92 290 92 102.3 279.5 102 511.5 101.7 743.7 289.8 932 521.9 932c181.3 0 335.8-115 394.6-276.1 1.5-4.2-.7-8.9-4.9-10.3l-56.7-19.5a8 8 0 00-10.1 4.8c-1.8 5-3.8 10-5.9 14.9-17.3 41-42.1 77.8-73.7 109.4A344.77 344.77 0 01655.9 829c-42.3 17.9-87.4 27-133.8 27-46.5 0-91.5-9.1-133.8-27A341.5 341.5 0 01279 755.2a342.16 342.16 0 01-73.7-109.4c-17.9-42.4-27-87.4-27-133.9s9.1-91.5 27-133.9c17.3-41 42.1-77.8 73.7-109.4 31.6-31.6 68.4-56.4 109.3-73.8 42.3-17.9 87.4-27 133.8-27 46.5 0 91.5 9.1 133.8 27a341.5 341.5 0 01109.3 73.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.6 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c-.1-6.6-7.8-10.3-13-6.2z"
                />
              </svg>
            </span>
            <span>
               Refresh
            </span>
            <!---->
          </button>
        </p>
      </div>
    </div>
    <canvas
      height="160"
      role="img"
      width="160"
    />
    <!---->
  </div>
  <div
    class="ant-qrcode css-var-root"
    style="background-color: transparent; width: 160px; height: 160px;"
  >
    <div
      class="ant-qrcode-cover"
    >
      <div>
        <span
          aria-label="check-circle"
          class="anticon anticon-check-circle"
          role="img"
          style="color: green;"
        >
          <svg
            aria-hidden="true"
            data-icon="check-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
            />
          </svg>
        </span>
         Scanned
      </div>
    </div>
    <canvas
      height="160"
      role="img"
      width="160"
    />
    <!---->
  </div>
</div>
`;

exports[`qr-code demo > renders download correctly 1`] = `
<div
  class="ant-space ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small css-var-root"
>
  <div
    class="ant-space-item"
  >
    <div
      aria-label="segmented control"
      class="ant-segmented css-var-root css-var-root"
      role="radiogroup"
      size="middle"
      tabindex="0"
    >
      <div
        class="ant-segmented-group"
      >
        <!---->
        <label
          class="ant-segmented-item ant-segmented-item-selected"
        >
          <input
            checked=""
            class="ant-segmented-item-input"
            name="v-0"
            type="radio"
          />
          <div
            aria-checked="true"
            class="ant-segmented-item-label"
            role="radio"
            title="canvas"
          >
            canvas
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            name="v-0"
            type="radio"
          />
          <div
            aria-checked="false"
            class="ant-segmented-item-label"
            role="radio"
            title="svg"
          >
            svg
          </div>
        </label>
      </div>
    </div>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <div>
      <div
        class="ant-qrcode css-var-root"
        style="margin-bottom: 16px; background-color: rgba(255, 255, 255, 0.5); width: 160px; height: 160px;"
      >
        <!---->
        <canvas
          height="160"
          role="img"
          width="160"
        />
        <img
          alt="QR-Code"
          src="https://gw.alipayobjects.com/zos/rmsportal/KDpgvguMpGfqaHPjicRK.svg"
          style="display: none;"
        />
      </div>
      <button
        class="ant-btn css-var-root ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
           download 
        </span>
        <!---->
      </button>
    </div>
  </div>
  <!---->
</div>
`;

exports[`qr-code demo > renders errorLevel correctly 1`] = `
<div
  data-v-app=""
>
  <div
    class="ant-qrcode css-var-root"
    style="margin-bottom: 16px; background-color: transparent; width: 160px; height: 160px;"
  >
    <!---->
    <canvas
      height="160"
      role="img"
      width="160"
    />
    <!---->
  </div>
  <div
    aria-label="segmented control"
    class="ant-segmented css-var-root css-var-root"
    role="radiogroup"
    size="middle"
    tabindex="0"
  >
    <div
      class="ant-segmented-group"
    >
      <!---->
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="v-0"
          type="radio"
        />
        <div
          aria-checked="false"
          class="ant-segmented-item-label"
          role="radio"
          title="L"
        >
          L
        </div>
      </label>
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          name="v-0"
          type="radio"
        />
        <div
          aria-checked="true"
          class="ant-segmented-item-label"
          role="radio"
          title="M"
        >
          M
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="v-0"
          type="radio"
        />
        <div
          aria-checked="false"
          class="ant-segmented-item-label"
          role="radio"
          title="Q"
        >
          Q
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="v-0"
          type="radio"
        />
        <div
          aria-checked="false"
          class="ant-segmented-item-label"
          role="radio"
          title="H"
        >
          H
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`qr-code demo > renders icon correctly 1`] = `
<div
  class="ant-qrcode css-var-root"
  style="background-color: transparent; width: 160px; height: 160px;"
>
  <!---->
  <canvas
    height="160"
    role="img"
    width="160"
  />
  <img
    alt="QR-Code"
    src="https://gw.alipayobjects.com/zos/rmsportal/KDpgvguMpGfqaHPjicRK.svg"
    style="display: none;"
  />
</div>
`;

exports[`qr-code demo > renders status correctly 1`] = `
<div
  class="ant-flex css-var-root ant-flex-wrap-wrap ant-flex-gap-middle"
>
  <div
    class="ant-qrcode css-var-root"
    style="background-color: transparent; width: 160px; height: 160px;"
  >
    <div
      class="ant-qrcode-cover"
    >
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-spinning ant-spin-section css-var-root"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
        <!---->
        <!---->
        <!---->
      </div>
    </div>
    <canvas
      height="160"
      role="img"
      width="160"
    />
    <!---->
  </div>
  <div
    class="ant-qrcode css-var-root"
    style="background-color: transparent; width: 160px; height: 160px;"
  >
    <div
      class="ant-qrcode-cover"
    >
      <p
        class="ant-qrcode-expired"
      >
        QR code expired
      </p>
      <button
        class="ant-btn css-var-root ant-btn-link ant-btn-color-link ant-btn-variant-link"
        type="button"
      >
        <span
          class="ant-btn-icon"
        >
          <span
            aria-label="reload"
            class="anticon anticon-reload"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="reload"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M909.1 209.3l-56.4 44.1C775.8 155.1 656.2 92 521.9 92 290 92 102.3 279.5 102 511.5 101.7 743.7 289.8 932 521.9 932c181.3 0 335.8-115 394.6-276.1 1.5-4.2-.7-8.9-4.9-10.3l-56.7-19.5a8 8 0 00-10.1 4.8c-1.8 5-3.8 10-5.9 14.9-17.3 41-42.1 77.8-73.7 109.4A344.77 344.77 0 01655.9 829c-42.3 17.9-87.4 27-133.8 27-46.5 0-91.5-9.1-133.8-27A341.5 341.5 0 01279 755.2a342.16 342.16 0 01-73.7-109.4c-17.9-42.4-27-87.4-27-133.9s9.1-91.5 27-133.9c17.3-41 42.1-77.8 73.7-109.4 31.6-31.6 68.4-56.4 109.3-73.8 42.3-17.9 87.4-27 133.8-27 46.5 0 91.5 9.1 133.8 27a341.5 341.5 0 01109.3 73.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.6 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c-.1-6.6-7.8-10.3-13-6.2z"
              />
            </svg>
          </span>
        </span>
        <span>
          Refresh
        </span>
        <!---->
      </button>
    </div>
    <canvas
      height="160"
      role="img"
      width="160"
    />
    <!---->
  </div>
  <div
    class="ant-qrcode css-var-root"
    style="background-color: transparent; width: 160px; height: 160px;"
  >
    <div
      class="ant-qrcode-cover"
    >
      <p
        class="ant-qrcode-scanned"
      >
        Scanned
      </p>
    </div>
    <canvas
      height="160"
      role="img"
      width="160"
    />
    <!---->
  </div>
</div>
`;

exports[`qr-code demo > renders type correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-root"
>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-qrcode css-var-root"
      style="background-color: transparent; width: 160px; height: 160px;"
    >
      <!---->
      <canvas
        height="160"
        role="img"
        width="160"
      />
      <!---->
    </div>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <div
      class="ant-qrcode css-var-root"
      style="background-color: transparent; width: 160px; height: 160px;"
    >
      <!---->
      <svg
        height="160"
        role="img"
        viewBox="0 0 25 25"
        width="160"
      >
        <!---->
        <path
          d="M0,0 h25v25H0z"
          fill="transparent"
          shape-rendering="crispEdges"
        />
        <path
          d="M0 0h7v1H0zM8 0h1v1H8zM10 0h1v1H10zM14 0h2v1H14zM18,0 h7v1H18zM0 1h1v1H0zM6 1h1v1H6zM10 1h2v1H10zM13 1h1v1H13zM18 1h1v1H18zM24,1 h1v1H24zM0 2h1v1H0zM2 2h3v1H2zM6 2h1v1H6zM10 2h3v1H10zM14 2h1v1H14zM18 2h1v1H18zM20 2h3v1H20zM24,2 h1v1H24zM0 3h1v1H0zM2 3h3v1H2zM6 3h1v1H6zM8 3h2v1H8zM11 3h1v1H11zM13 3h3v1H13zM18 3h1v1H18zM20 3h3v1H20zM24,3 h1v1H24zM0 4h1v1H0zM2 4h3v1H2zM6 4h1v1H6zM8 4h1v1H8zM10 4h2v1H10zM14 4h3v1H14zM18 4h1v1H18zM20 4h3v1H20zM24,4 h1v1H24zM0 5h1v1H0zM6 5h1v1H6zM8 5h1v1H8zM10 5h1v1H10zM12 5h1v1H12zM18 5h1v1H18zM24,5 h1v1H24zM0 6h7v1H0zM8 6h1v1H8zM10 6h1v1H10zM12 6h1v1H12zM14 6h1v1H14zM16 6h1v1H16zM18,6 h7v1H18zM8 7h2v1H8zM12 7h1v1H12zM15 7h1v1H15zM0 8h1v1H0zM4 8h1v1H4zM6 8h4v1H6zM11 8h2v1H11zM17 8h5v1H17zM24,8 h1v1H24zM1 9h3v1H1zM8 9h1v1H8zM13 9h5v1H13zM20 9h2v1H20zM23 9h1v1H23zM4 10h1v1H4zM6 10h1v1H6zM11 10h1v1H11zM14 10h3v1H14zM19 10h4v1H19zM0 11h2v1H0zM4 11h1v1H4zM7 11h6v1H7zM14 11h2v1H14zM18 11h2v1H18zM22 11h2v1H22zM2 12h2v1H2zM6 12h1v1H6zM8 12h1v1H8zM10 12h1v1H10zM12 12h1v1H12zM16 12h3v1H16zM21,12 h4v1H21zM0 13h1v1H0zM2 13h1v1H2zM9 13h1v1H9zM12 13h1v1H12zM15 13h3v1H15zM20 13h1v1H20zM23 13h1v1H23zM3 14h1v1H3zM6 14h7v1H6zM15 14h2v1H15zM19 14h4v1H19zM2 15h1v1H2zM5 15h1v1H5zM8 15h1v1H8zM10 15h3v1H10zM18 15h3v1H18zM22 15h2v1H22zM0 16h5v1H0zM6 16h2v1H6zM9 16h4v1H9zM15 16h8v1H15zM8 17h1v1H8zM10 17h2v1H10zM13 17h1v1H13zM16 17h1v1H16zM20 17h1v1H20zM0 18h7v1H0zM8 18h1v1H8zM10 18h3v1H10zM14 18h1v1H14zM16 18h1v1H16zM18 18h1v1H18zM20 18h1v1H20zM0 19h1v1H0zM6 19h1v1H6zM10 19h1v1H10zM12 19h1v1H12zM16 19h1v1H16zM20,19 h5v1H20zM0 20h1v1H0zM2 20h3v1H2zM6 20h1v1H6zM8 20h5v1H8zM14 20h1v1H14zM16 20h7v1H16zM0 21h1v1H0zM2 21h3v1H2zM6 21h1v1H6zM9 21h1v1H9zM11 21h1v1H11zM14 21h2v1H14zM18 21h2v1H18zM22,21 h3v1H22zM0 22h1v1H0zM2 22h3v1H2zM6 22h1v1H6zM10 22h9v1H10zM21 22h1v1H21zM23 22h1v1H23zM0 23h1v1H0zM6 23h1v1H6zM10 23h1v1H10zM15 23h1v1H15zM18 23h6v1H18zM0 24h7v1H0zM8 24h1v1H8zM12 24h1v1H12zM15 24h1v1H15zM22,24 h3v1H22z"
          fill="rgba(0,0,0,0.88)"
          shape-rendering="crispEdges"
        />
        <!---->
      </svg>
    </div>
  </div>
  <!---->
</div>
`;
